--- a/public/assets/css/header_footer.css
+++ b/public/assets/css/header_footer.css
@@ -7,7 +7,7 @@
 
 html,
 body {
-    height: 100%;
+    min-height: 100vh;
 }
 
 body {
@@ -25,7 +25,8 @@ body {
     padding: 0 0;
 }
 
-.main-content {
+.main-content,
+.wrapper {
     flex: 1;
 }
 
