--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -13,7 +13,7 @@ body {
 
 /*  FORM CONTAINER  */
 .form-container {
-    max-width: 420px;
+    width: 450px;
     margin: 60px auto;
     background-color: #ffffff;
     padding: 30px 35px;
