--- a/public/assets/css/track_invoices.css
+++ b/public/assets/css/track_invoices.css
@@ -1,5 +1,5 @@
 .invoice-container {
-    max-width: 1100px;
+    width: 1100px;
     margin: 32px auto;
     padding: 24px;
     background: #ffffff;
@@ -56,10 +56,11 @@
 }
 
 .invoice-table td {
-    padding: 13px 14px;
+    padding: 9px 3px;
     border-bottom: 1px solid #e5e7eb;
     font-size: 14px;
     color: #374151;
+    width: 70px;
     vertical-align: middle;
 }
 
